# abyss

./: README.md
crates/engine_ai/: Cargo.toml
crates/engine_ai/src/: lib.rs  swim_ai.rs
crates/engine_audio/: Cargo.toml
crates/engine_audio/src/: lib.rs  underwater.rs
crates/engine_network/src/protocol/: client_message.rs  server_message.rs
crates/engine_render/src/: lib.rs
crates/engine_render/src/underwater/: caustics.rs  color_shift.rs  depth_fog.rs  mod.rs
crates/engine_ui/: Cargo.toml
crates/engine_ui/src/hud/: depth_gauge.rs  light_meter.rs  mod.rs  oxygen_bar.rs  pressure_indicator.rs
crates/engine_world/src/: lib.rs
crates/engine_world/src/ocean/: depth_layers.rs  mod.rs  trench.rs
crates/game/: Cargo.toml
crates/game/src/: integration_tests.rs  lib.rs
crates/game/src/bioluminescence/: mod.rs  organisms.rs
crates/game/src/building/: airlock.rs  base.rs  mod.rs
crates/game/src/crafting/: ancient_altar.rs  deep_forge.rs  equipment.rs  mod.rs  weapons.rs
crates/game/src/creatures/: hostile.rs  mod.rs  passive.rs
crates/game/src/diving/: decompression.rs  mod.rs  movement.rs
crates/game/src/light/: mod.rs
crates/game/src/networking/: diving_sync.rs  mod.rs
crates/game/src/oxygen/: mod.rs  supply.rs  tank.rs
crates/game/src/pressure/: mod.rs  suit.rs  zones.rs
crates/game/src/profiling/: mod.rs
crates/game/src/survival/: death.rs  mod.rs
crates/game/src/world/: mod.rs  resources.rs
crates/game/tests/: integration.rs
crates/server/: Cargo.toml
crates/server/src/: server.rs
(+4 files in other folders)
